@@ -1,8 +1,12 @@
 Revision history for Dist-Surveyor
 
 {{$NEXT}}
+	Adding keep_alive to connections - major speedup
+	Changed to batch get_module_versions_in_release - another 30% speedup
 
 0.011     2013-07-08 16:11:57 Asia/Tokyo
+	More refactoring
+	added a missing 'use version' in Inquiry.pm
 
 0.010     2013-07-05 11:15:05 Asia/Tokyo
 	Major refactoring done
